# genewalkR

./: .Rbuildignore  .gitignore  404.html  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE-text.md  NAMESPACE  README.md  _pkgdown.yml  authors.html  authors.md  configure  configure.win  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
R/: base_docs.R  base_generics.R  checkmate_ext.R  classes.R  data.R  embed_drift.R  extendr-wrappers.R  genewalk.R  node2vec.R  params.R  plots.R  synthetic_data.R  utils.R  zzz.R
articles/: genewalk.html  genewalk.md  index.html  index.md  node2vec.html  node2vec.md
data/: g2g_interactions.rda  gene_ontology.rda  myc_genes.rda  reactome.rda
data-raw/: export_datasets.R  indra.R  myc_target_genes.R  pull_data_to_db.R  pull_opentargets.R
man/: EmbedDrift.Rd  GeneWalk.Rd  GeneWalkGenerator.Rd  assertGeneWalkDataParams.Rd  assertGeneWalkDataTable.Rd  assertGeneWalkGraphDt.Rd  assertNode2Vec.Rd  assertNode2VecParam.Rd  assertPPIParams.Rd  assertPathwayParams.Rd  calculate_drift.Rd  calculate_genewalk_stats.Rd  checkGeneWalkDataParams.Rd  checkGeneWalkDataTable.Rd  checkGeneWalkGraphDt.Rd  checkNode2Vec.Rd  checkNode2VecParams.Rd  checkPPIParams.Rd  checkPathwayParams.Rd  check_degree_distribution.Rd  db_path.Rd  differential_graph_test_data.Rd  dim.DataBuilder.Rd  dot-get_node_degree.Rd  dot-string_cols_to_factors.Rd  download_database.Rd  evaluate_node2vec_test.Rd  g2g_interactions.Rd  gene_ontology.Rd  gene_ontology_source.Rd  generate_initial_emb.Rd  generate_initial_embeddings.Rd  generate_permuted_emb.Rd  genewalkR_class.Rd  get_aligned_embd.Rd  get_db_connection.Rd  get_default_graph_dt.Rd  get_embedding.Rd  get_embeddings.Rd  get_expected_associations.Rd  (+51 more)
misc/: workbench.R
pkgdown/: extra.css
reference/: GeneWalk.html  GeneWalk.md  GeneWalkGenerator.html  GeneWalkGenerator.md  assertGeneWalkDataParams.html  assertGeneWalkDataParams.md  assertGeneWalkDataTable.html  assertGeneWalkDataTable.md  assertGeneWalkGraphDt.html  assertGeneWalkGraphDt.md  assertNode2VecParam.html  assertNode2VecParam.md  calculate_genewalk_stats.html  calculate_genewalk_stats.md  db_path.html  (+116 more)
src/rust/: Cargo.toml
src/rust/src/: data.rs  embedding.rs  graph.rs  lib.rs  utils.rs
(+20 files in other folders)
