[package]
name = 'genewalkR'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.85'

[lib]
crate-type = ['staticlib']
name = 'genewalkR'

[profile.test]
opt-level = 3
debug = false

[profile.release]
lto = "thin"
codegen-units = 1

[dependencies]
extendr-api = '0.8.1'
faer = "0.23.2"
itertools = "0.14.0"
num-traits = "0.2.19"
rand = "0.9.2"
rayon = "1.11.0"
rustc-hash = "2.1.1"

[target.'cfg(not(target_os = "windows"))'.dependencies]
burn = { version = "0.20.1", features = ["dataset", "train", "tch", "ndarray"] }
node2vec-rs = { version = "0.1.3", default-features = false, features = [
    "tch-cpu",
] }

[target.'cfg(target_os = "windows")'.dependencies]
burn = { version = "0.20.1", features = ["dataset", "train", "ndarray"] }
node2vec-rs = { version = "0.1.3", default-features = false, features = [
    "ndarray",
] }

[lints.rust]
non_snake_case = "allow"
