[package]
name = 'genewalkR'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.85'

[lib]
crate-type = ['staticlib']
name = 'genewalkR'

# I want aggressive optimisation also during testing
[profile.test]
opt-level = 3
debug = false

[profile.release]
lto = "thin"
codegen-units = 1

[dependencies]
extendr-api = '0.8.1'
faer = "0.23.2"
itertools = "0.14.0"
num-traits = "0.2.19"
rand = "0.9.2"
rayon = "1.11.0"
rustc-hash = "2.1.1"
node2vec-rs = { git = "https://github.com/GregorLueg/node2vec-rs.git", branch = "feat-gensim-type-implementation" }


[lints.rust]
non_snake_case = "allow"
